# spline-midi-smooth

./: README.md  pyproject.toml  quickstart.sh  requirements.txt
docs/: DEVELOPER-GUIDE.md  USER-GUIDE.md
examples/: smooth_pitch_bend.py  smooth_volume.py
spline_midi_smooth/: __init__.py  anti_alias.py  deadband_spline.py  interpolation.py  midi_processor.py
spline_midi_smooth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_anti_alias.py  test_deadband_spline.py  test_interpolation.py  test_midi_processor.py
