[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spline-midi-smooth"
version = "0.1.0"
description = "Spline-based MIDI smoothing proving deadband = piecewise-linear spline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Forgemaster", email = "forgemaster@superinstance.ai"},
]

dependencies = [
    "numpy>=1.24",
    "mido>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["spline_midi_smooth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
